@@ -89,7 +89,7 @@ static R_NativePrimitiveArgType lowess_t[] = {REALSXP, REALSXP, INTSXP, REALSXP,
 				       INTSXP, REALSXP, REALSXP, REALSXP, REALSXP};
 
 
-static R_NativePrimitiveArgType massdist_t[] = {REALSXP, INTSXP, REALSXP, REALSXP, REALSXP, INTSXP};
+static R_NativePrimitiveArgType massdist_t[] = {REALSXP, REALSXP, INTSXP, REALSXP, REALSXP, REALSXP, INTSXP};
 
 static R_NativePrimitiveArgType R_max_col_t[] = {REALSXP, INTSXP, INTSXP, INTSXP};
 
@@ -220,7 +220,7 @@ static R_CallMethodDef callMethods [] = {
     CALLDEF(R_getSymbolInfo, 2),
     CALLDEF(R_getDllTable, 0),
     CALLDEF(R_getRegisteredRoutines, 1),
- 
+
     /* mapply */
     CALLDEF(do_mapply, 4),
 
