@@ -40,6 +40,11 @@ NEW FEATURES
 
     o	[g]sub() now have a 'useBytes' argument like grep() and regexpr().
 
+    o	density() is now an S3 generic where density.default() {former
+	density()} has new argument 'weights' for specifying observation
+	masses different than the default 1/N -- based on a suggestion and
+	code from Adrian Baddeley.
+
 
 DEPRECATED & DEFUNCT
 
@@ -66,6 +71,12 @@ INSTALLATION
 
     o	The places where the doc, include and share directory trees are
 	installed can be specified independently: see the R-admin manual.
+
+
+C-LEVEL FACILITIES
+
+    o	C function massdist() {called from density()} has new 2nd argument
+        'xmass' (= weights).
 
 
 BUG FIXES
@@ -138,7 +149,7 @@ BUG FIXES
     o	The Tcl/Tk console did not support multibyte characters.
 
     o	as.POSIXlt() could give infinite recursion if passed a corrupt
-	"POSIXct" object (generated by an inccorect call to c.POSIXct, 
+	"POSIXct" object (generated by an inccorect call to c.POSIXct,
 	PR#7826).
 
 
